fix sub sub menu scrollbar

--- a/app/app.css
+++ b/app/app.css
@@ -60,4 +60,22 @@
   aside::-webkit-scrollbar-thumb {
     @apply bg-[#e4e4e4] dark:bg-[#333c4c] rounded-3xl;
   }
+
+  /* .sidebar-subsub-menu::-webkit-scrollbar {
+    width: 6px;
+  }
+  .sidebar-subsub-menu::-webkit-scrollbar-track {
+    @apply bg-[#f3f4f6] bg-red-400;
+  }
+  .sidebar-subsub-menu::-webkit-scrollbar-thumb {
+    @apply bg-[#e4e4e4] dark:bg-[#28293d] rounded-3xl;
+  } */
+
+
+  .navbar-subsub-menu::-webkit-scrollbar-track {
+    @apply bg-[#f3f4f6] dark:bg-[#333c4c];
+  }
+  .navbar-subsub-menu::-webkit-scrollbar-thumb {
+    @apply  bg-[#e4e4e4] dark:bg-[#28293d]
+  }
 }
